<resources>
    <string name="app_name">KunLu SDK</string>
    <string name="app_version_tips">版本号: %s</string>
    <string name="user_guide_title">鲲鹭SDK例子</string>
    <string name="user_login">登录</string>
    <string name="user_register">注册</string>
    <string name="country_code">国家码</string>
    <string name="email_or_phone">手机号</string>
    <string name="account">账号</string>
<!--    <string name="email_or_phone">邮箱与手机号</string>-->
    <string name="password">密码</string>
    <string name="reset_password">重置密码</string>
    <string name="verify_code">验证码</string>
    <string name="verify_image_code">图像验证码</string>
    <string name="send_verify_code">发送验证码</string>
    <string name="forget_password">忘记密码</string>
    <string name="user_manager">用户管理</string>
    <string name="user_info">用户信息</string>
    <string name="logout">登出</string>
    <string name="home_manager">家庭管理</string>
    <string name="home_create">创建家庭</string>
    <string name="home_select">选择家庭</string>
    <string name="home_list">家庭列表</string>
    <string name="scene_one_key">一键控制</string>
    <string name="scene_one_key_scene">一键场景</string>
    <string name="scene_name">场景名称</string>
    <string name="scene_icon">场景图标</string>
    <string name="scene">场景</string>
    <string name="scene_name_hint">请填写名称</string>
    <string name="scene_manager">场景管理</string>
    <string name="device_list">设备列表</string>
    <string name="device_set_net">设备配网</string>
    <string name="device_set_net_finish">完成配网</string>
    <string name="device_wifi_mode">WIFI配网</string>
    <string name="device_ap_mode">AP兼容模式配网</string>
    <string name="device_zigbee_mode">Zigbee Gateway</string>
    <string name="device_qr_mode">QR 配网</string>
    <string name="action_list">操作列表</string>
    <string name="change_password">修改密码</string>


    <string name="user_avatar">用户头像</string>
    <string name="user_name">用户名称</string>
    <string name="user_phone">手机号</string>
    <string name="user_email">邮箱</string>
    <string name="user_update">更新名称</string>
    <string name="user_avatar_update">更换头像</string>

    <string name="family_create">创建家庭</string>
    <string name="family_member_create">添加家庭成员</string>
    <string name="family_member_edit">编辑家庭成员</string>
    <string name="room_create">创建房间</string>
    <string name="room_name">房间名称</string>
    <string name="room_manager">房间管理</string>
    <string name="member_list">成员列表</string>
    <string name="family_select">选择家庭</string>
    <string name="family_list">家庭列表</string>
    <string name="family_details">家庭详情</string>
    <string name="family_name">家庭名称</string>
    <string name="family_name_hint">请输入家庭名称</string>
    <string name="family_edit">编辑家庭</string>
    <string name="family_id">家庭 ID</string>

    <string name="device_set_wifi">设置Wifi</string>
    <string name="device_set_wifi_hint">请连接Wi-Fi并输入Wi-Fi</string>
    <string name="please_select_a_wifi_network">请选择一个WiFi网络</string>
    <string name="click_one_button_control_to_perform_the_following_equipment_operation">点击“一键控制”后就执行以下设备操作</string>
    <string name="perform_the_following_equipment_operations">就执行以下设备操作</string>
    <string name="when_the_following_conditions_are_met">当满足以下条件</string>
    <string name="gear_setting">档位设置</string>


    <string name="city">城市</string>
    <string name="city_hint">请输入城市</string>

    <string name="create">创建</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="finish">完成</string>
    <string name="back">返回</string>
    <string name="retry_">重试</string>
    <string name="name_">名称</string>
    <string name="icon_">图标</string>
    <string name="cancel_">取消</string>
    <string name="sure_">确认</string>
    <string name="open_">开启</string>
    <string name="close">关闭</string>
    <string name="greater_than">大于</string>
    <string name="less_than">小于</string>
    <string name="in_the_interval">在区间</string>
    <string name="upper_limit_of_interval">区间上限</string>
    <string name="lower_limit_of_interval">区间下限</string>
    <string name="the_upper_limit_of_interval_cannot_be_greater_than_the_lower_limit">区间下限不能大于区间上限</string>


    <string name="select_delay">选择延时</string>
    <string name="select_delay_time">选择延时时间</string>
    <string name="select_device">选择设备</string>
    <string name="select_scene">选择场景</string>
    <string name="delayed">延时</string>
    <string name="time">时间</string>
    <string name="repeat_set">重复设置</string>
    <string name="every_day">每天</string>
    <string name="working_day">工作日</string>
    <string name="weekend">周末</string>
    <string name="custom">自定义</string>
    <string name="please_select_the_time_">请选择时间</string>
    <string name="select_the_time">选择时间</string>
    <string name="please_select_duplicate_setting">请选择重复设置！</string>
    <string name="rest_day">休息日</string>
    <string name="all_day">全天</string>
    <string name="timing_trigger">定时触发</string>
    <string name="effective_period">生效时间段</string>
    <string name="by_the_next_day">到第二天</string>
    <string name="reach">到</string>
    <string name="trigger_mode">触发方式</string>
    <string name="any_of_the_following_conditions_are_satisfied">满足以下任意条件</string>
    <string name="all_of_the_following_conditions_are_met">满足以下所有条件</string>


    <string name="countdown_of_distribution_network">配网倒计时</string>
    <string name="routers_mobile_phones_and_devices_should_be_as_close_as_possible">路由器、手机和设备尽量靠近</string>
    <string name="obtain_the_distribution_network_security_code">1. 获取配网安全码</string>
    <string name="scene_name_already_exists_">场景名称已经存在！</string>
    <string name="device_connection_router">2.设备连接路由器</string>
    <string name="_cloud_verification_device_information">3. 云端验证设备信息</string>
    <string name="equipment_landing_in_the_cloud_step_4">4. 设备登录云端</string>
    <string name="binding_equipment">5. 绑定设备</string>
    <string name="analysis_result_no_device_is_bound_please_try_to_use_compatibility_mode_to_complete_equipment_distribution_network">分析结果：未绑定设备，请尝试使用兼容模式完成设备配网</string>
    <string name="node">所在节点：</string>
    <string name="api_status">API状态：1</string>
    <string name="app_channel">App通道：1</string>
    <string name="equipment_channel_1">设备通道：1</string>
    <string name="complete_distribution_network">完成配网</string>
    <string name="device_net_tips">请尽可能使设备、路由器与手机相互靠近</string>
    <string name="distribution_network_success">配网成功</string>
    <string name="compatibility_mode">兼容模式</string>
    <string name="distribution_network_failure">配网失败</string>
    <string name="net_failure_tips">原因分析完成，请根据下方提示继续操作！</string>
    <string name="not_bound_to_device_please_try_to_use_compatibility_mode_to_complete_device_distribution">未绑定到设备，请重试</string>
    <string name="bad_wifi">Wi-Fi网络不稳定，请重试</string>
    <string name="device_bound_by_sb">1. 不支持绑定此设备\n2. 设备已被其他人绑定</string>
    <string name="device_bound_not_support">1. 不支持绑定此设备\n2. 设备已被 %1$s绑定</string>

    <string name="select_gateway">选择网关</string>
    <string name="add_device">添加设备</string>
    <string name="add_condition">添加条件</string>
    <string name="gateway_offline">网关不在线!</string>
    <string name="select_execution_action">选择执行动作</string>
    <string name="delay_cannot_be_0">延时不能为0</string>


    <string name="_gateway_enters_add_mode">1.网关进入添加模式</string>
    <string name="search_for_sub_devices">2.搜索子设备</string>
    <string name="_the_sub_device_is_bound_successfully">3.子设备绑定成功</string>
    <string name="treatment_method">处理方式:</string>
    <string name="please_follow_the_equipment_distribution_network_operation_instructions_and_make_the_sub_equipment_and_gateway_as_close_as_possible">请按照设备配网操作说明进行操作，并使子设备和网关尽量靠近</string>
    <string name="gateway_has_found_this_type_of_sub_device">网关已搜索到此类型子设备</string>
    <string name="the_gateway_did_not_search_for_this_type_of_sub_device">网关未搜索到此类型子设备</string>

    <string name="please_select_the_scene_icon">请选择场景图标</string>
    <string name="at_a_certain_time">在某个时间</string>
    <string name="for_example_every_night_at_8_oclock">例如：每天晚上8点</string>
    <string name="a_device">某个设备</string>
    <string name="for_example_air_conditioning_temperature_30">例如：空调温度30°</string>



</resources>